[package]
name = "testcase-markdown"
description = "A rust utility to write test cases in markdown"
version = "0.0.1"
authors = ["Sean Colsen <colsen.sean@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.9"

[dev-dependencies]
toml = "0.7.3"
